test/fail_compilation/fail4375v.d
// 4375: Dangling else

version (A)
    version (B)
        struct G3 {}
else
    struct G4 {}

